--- a/BleBoxManagementSystem/BBMS.Backend/BBMS.Backend.csproj
+++ b/BleBoxManagementSystem/BBMS.Backend/BBMS.Backend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -19,6 +19,10 @@
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\BBMS.Defaults\BBMS.Defaults.csproj" />
   </ItemGroup>
 
 </Project>
