--- a/BleBoxManagementSystem/BBMS.Gateway/BBMS.Gateway.csproj
+++ b/BleBoxManagementSystem/BBMS.Gateway/BBMS.Gateway.csproj
@@ -13,7 +13,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.28.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.65.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.66.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+    <Protobuf Include="..\..\BBMS.Defaults\Protos\auth.proto" GrpcServices="Client" />
   </ItemGroup>
 
   <ItemGroup>
