--- a/BleBoxManagementSystem/BBMS.Gateway/BBMS.Gateway.csproj
+++ b/BleBoxManagementSystem/BBMS.Gateway/BBMS.Gateway.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
     <Protobuf Include="..\..\BBMS.Defaults\Protos\auth.proto" GrpcServices="Client" />
   </ItemGroup>
 
